--- a/Javascript/wordcount/index.html
+++ b/Javascript/wordcount/index.html
@@ -4,8 +4,6 @@
 * website: www.bksofteng.com
 -->
 
-
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -13,11 +11,13 @@
 <head>
     <title>Word Count App</title>
     <link href="style.css" type="text/css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 <div class="main-wrapper">
-
+    <h1>Word Count App</h1>
+    <h2><span>by: </span> Besian Krasniqi</h2>
     <textarea id="area-txt" class="txt-area" placeholder="Insert text" ></textarea>
     <button id="calculate" class="calculate-words">CALCULATE</button>
 
@@ -26,13 +26,10 @@
         <span><input type="text" name="custom-word-field" id="custom-word-field"></span>
 
     </div>
-
     <div id="output-all" class="all-output"></div>
-
 </div>
 
 <script src="behavior.js" type="text/javascript"></script>
 </body>
-
 
 </html>
