--- a/Javascript/App WordCount/index.html
+++ b/Javascript/App WordCount/index.html
@@ -4,6 +4,10 @@
 * website: www.bksofteng.com
 -->
 
+<!--
+ * See it live at: http://www.bksofteng.com/code/word-count
+-->
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -29,7 +33,7 @@
     <div id="output-all" class="all-output"></div>
 </div>
 
-<script src="behavior.js" type="text/javascript"></script>
+<script src="countWords.js" type="text/javascript"></script>
 </body>
 
 </html>
