--- a/Javascript/App Task Manager/index.html
+++ b/Javascript/App Task Manager/index.html
@@ -6,6 +6,10 @@
  *	website: bksofteng.com
 -->
 
+<!--
+ * See it live at: http://www.bksofteng.com/code/task-manager-app
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 	
@@ -15,13 +19,16 @@
 </head>
 
 <body>
+	<h1>Task Manager App</h1>
+	<h2><span>by: </span>Besian Krasniqi</h2>
+
 	<div id="main">
-	   	<input type="text" id="input1" size="27">
-		<input type="submit" value="submit" name="submit" id="submit">
+	   	<input type="text" id="input1" size="27" placeholder="enter task">
+		<input type="submit" value="Add Task" name="submit" id="submit">
         <div id="tasks"></div>
 	</div>
 	<script src="jquery-1.11.0.js" type="text/javascript"></script>
-	<script src="behavior.js" type="text/javascript"></script>
+	<script src="taskManager.js" type="text/javascript"></script>
 </body>
 
 </html>
